Fixed compact mode and typing overlapping it

--- a/scss/components/_chat.scss
+++ b/scss/components/_chat.scss
@@ -352,7 +352,7 @@ div[class*="containerCozy-"] div[class*="container-"] div[class*="wrapper-"] {
   border-color: transparent;
 }
 
-.theme-dark .containerCozy-jafyvG { // scss-lint:disable MergeableSelector
+.theme-dark .containerCozy-jafyvG, .theme-dark div[class*="containerCompactBounded-"] { // scss-lint:disable MergeableSelector
   &[class*="isLocalBot-"] {
     background-image: none;
     box-shadow: none;
@@ -636,7 +636,7 @@ div[class*="privateChannels-"] {
 
   div[class*="wrapper-"] { background-color: var(--notif); }
 
-  & + div[class*="container-2"] {
+  & + div[class*="container-3b"] {
     border-top: $border-bottom-row;
     height: 51px;
   }
@@ -1119,7 +1119,7 @@ div[class*="channels-"] {
     & + div[class*="container-"] { border-top: $border-bottom-row; }
   }
 
-  div[class*="container-2T"] {
+  div[class*="container-3b"] {
     border-top: $border-bottom-row;
     button:hover { background-color: var(--dark-secondary); }
   }
